<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/course_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/course_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/course_start_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/start_date"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_course_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="dd/MM/yyyy"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/course_end_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/end_date"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_course_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="dd/MM/yyyy"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/course_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/status"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_course_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/course_ins_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/ins_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_course_ins_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/course_ins_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/ins_phone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_course_ins_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/course_ins_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/ins_email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_course_ins_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/course_note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:text="@string/note"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_course_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:layout_margin="@dimen/big_padding"
            android:textColor="@color/buttonLabel" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/button_description_return"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onReturnClicked"
            />

    </LinearLayout>
</ScrollView>
